[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/ProgrammerArt/call.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Weapons/Guns/GunTest.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Maps/ZombiesManager.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Entities/Zombie.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 532.315, 1646.3, -1809.31, 382.926, -2256.51, -887.971, -938.468, -1510.23, 2344.72, -955.781, 1974.72, 379.562 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]
outlines = [ PoolVector2Array( 1974.72, 379.562, 2344.72, -955.781, -938.468, -1510.23, -2256.51, -887.971, -1809.31, 382.926, 532.315, 1646.3 ) ]

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="floor_placeholder" type="Sprite" parent="."]
position = Vector2( -0.397797, -0.326462 )
scale = Vector2( 1.74413, 1.094 )
z_index = -10
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="TestGun" parent="Player" instance=ExtResource( 3 )]

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="roundIntervalTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="zombieSpawnInterval" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="zombieSpawns" type="Node" parent="."]

[node name="spawn01" type="Position2D" parent="zombieSpawns"]
position = Vector2( 0, -1000 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 54.7035, -442.385 )
[connection signal="timeout" from="roundIntervalTimer" to="." method="_on_roundIntervalTimer_timeout"]
[connection signal="timeout" from="zombieSpawnInterval" to="." method="_on_zombieSpawnInterval_timeout"]
